# Code_Agent

./: .gitignore  Agent.py  CHANGELOG.md  CONTRIBUTING.md  Check.py  LICENSE  README.md  improvement-spec.md  memory.example.json  pyproject.toml  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: ARCHITECTURE.md
src/shellmind/: __init__.py  __main__.py  agent.py  cli.py  config.py  config_parser.py  memory.py  platform.py
src/shellmind/llm/: __init__.py  base.py  model_registry.py  ollama.py  openai.py
src/shellmind/tools/: __init__.py  base.py  fileops.py  filesystem.py  git.py  interactive.py  pkg_manager.py  registry.py  shell.py  undo.py
src/shellmind/ui/: __init__.py  colors.py  display.py  prompt.py  spinner.py  theme.py
tests/: conftest.py  test_memory.py  test_phase3_phase4.py  test_platform.py  test_tools.py  test_tools_extended.py
