[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shellmind"
version = "5.0.0"
description = "A local-first, cross-platform AI coding assistant powered by Ollama (and more)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "coding", "assistant", "ollama", "cli", "terminal"]
authors = [
    {name = "ShellMind Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Artificial Intelligence",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/shellmind/shellmind"
Repository = "https://github.com/shellmind/shellmind"
Documentation = "https://github.com/shellmind/shellmind#readme"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0"]

[project.scripts]
shellmind = "shellmind.cli:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shellmind*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
src = ["src", "tests"]
